--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
 
 
 
-<div class="Question  p-3 ">
-  <div class="row gy-4 gx-4">
+<div class="Question  p-3  d-flex spaceing">
+  <div class="row gy-4 gx-4 ">
     <div class="col-lg-6">
       <img  class="img-fluid" src="honda-cbr-main/images/faq.png" width="572px" height="507px">
         </div>
